--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -2,8 +2,8 @@ version: 1
 indices:
   channels:
     include:
-      - '/screens/caesars/menus/restaurants/caesars_cafe/**'
-    target: '/screens/channels'
+      - '/screens/caesars/**'
+    target: '/screens/caesars/channels'
     properties:
       title:
         select: head > meta[property="og:title"]
