Added manifest json

--- a/screens/caesars/menus/restaurants/caesars_cafe/manifest.json
+++ b/screens/caesars/menus/restaurants/caesars_cafe/manifest.json
@@ -12,7 +12,7 @@
   "timestamp": 1671099599144,
   "entries": [
     {
-      "path": "./media_16fabc6dba0c458d5a073465f32d89ea48e3bc656.png?width=750&format=png&optimize=medium",
+      "path": "./media_1de0241156db1dd33ca82a4310022aaa55bda8eb7.png",
       "timestamp": 1593512456954
     },
     {
