--- a/screens/caesars/menus/restaurants/caesars_cafe/breakfast.manifest.json
+++ b/screens/caesars/menus/restaurants/caesars_cafe/breakfast.manifest.json
@@ -12,7 +12,7 @@
   "timestamp": 1671099599144,
   "entries": [
     {
-      "path": "./media_1de0241156db1dd33ca82a4310022aaa55bda8eb7.png",
+      "path": "/media_1de0241156db1dd33ca82a4310022aaa55bda8eb7.png",
       "timestamp": 1593512456954
     },
     {
