Updated manifest entry

--- a/screens/caesars/menus/restaurants/caesars_cafe/breakfast.manifest.json
+++ b/screens/caesars/menus/restaurants/caesars_cafe/breakfast.manifest.json
@@ -12,6 +12,10 @@
   "timestamp": 1671099599144,
   "entries": [
     {
+      "path": "/screens/caesars/menus/restaurants/caesars_cafe/breakfast",
+      "timestamp": 1658844892337
+    },
+    {
       "path": "/media_1de0241156db1dd33ca82a4310022aaa55bda8eb7.png",
       "timestamp": 1593512456954
     },
